2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* itrontask01/task1.c: Convert calls to legacy routine rtems_clock_get(
	RTEMS_CLOCK_GET_TOD, ..) to rtems_clock_get_tod(..).

2009-04-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* itronhello/Makefile.am, itronmbf01/Makefile.am,
	itronmbox01/Makefile.am, itronsem01/Makefile.am,
	itrontask01/Makefile.am, itrontask02/Makefile.am,
	itrontask03/Makefile.am, itrontask04/Makefile.am,
	itrontime01/Makefile.am: 
	Eliminate _exe_/.exe.

2008-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* itrontask04/init.c: Run all tests successfully with maxixum number of
	priorities as 16 instead of 256. This was done by temporarily
	modifying the score priority.h maximum. This allowed testing of all
	API code to ensure that it worked properly with a reduced number of
	priorities. Most modifications were to switch from hard-coded maximum
	to using the API provided methods to determine maximum number of
	priority levels.

2008-05-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* itronhello/system.h, itronmbox01/system.h, itrontask02/system.h,
	itrontime01/system.h: Add use of
	CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER.

2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* itronhello/init.c, itronmbf01/init.c, itronmbox01/init.c,
	itronsem01/init.c, itrontask01/init.c, itrontask02/init.c,
	itrontask03/init.c, itrontask04/init.c, itrontime01/init.c: Change
	TEST_INIT to CONFIGURE_INIT. Make tmacros.h available to all POSIX
	tests. Add a clock_settime case for < 1988.

2007-05-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* itronmbf01/init.c, itronmbf01/itronmbf01.scn, itrontask02/init.c,
	itrontask03/itrontask03.scn, itrontask03/task1.c,
	itrontask04/itrontask04.scn, itrontask04/task3.c: Add optional
	managers to Makefiles. Clean up test cases so last output line
	follows END OF pattern. Make sure test case all run. All tests
	appeared ok on sis.

2007-02-06	Joel Sherrill <joel@OARcorp.com>
