@@ -8,7 +8,7 @@
  *
  *  Output parameters:  NONE
  *
- *  COPYRIGHT (c) 1989-1999.
+ *  COPYRIGHT (c) 1989-2009.
  *  On-Line Applications Research Corporation (OAR).
  *
  *  The license and distribution terms for this file may be
@@ -47,7 +47,8 @@ void Task_2_through_4()
     printf(name);
     print_time( " - rtems_clock_get_tod - ", &time, "\n" );
 
-    status = rtems_task_wake_after( tid_index * 5 * TICKS_PER_SECOND );
+    status = rtems_task_wake_after(
+      tid_index * 5 * rtems_clock_get_ticks_per_second() );
     directive_failed( status, "rtems_task_wake_after" );
   }
 }
