@@ -8,7 +8,7 @@
  *
  *  Output parameters:  NONE
  *
- *  COPYRIGHT (c) 1989-1999.
+ *  COPYRIGHT (c) 1989-2009.
  *  On-Line Applications Research Corporation (OAR).
  *
  *  The license and distribution terms for this file may be
@@ -37,7 +37,7 @@ void Non_Dormant_task()
 
   while (TRUE) {
     puts( "NON-DORMANT - Sleep for 2 minutes" );
-    status = rtems_task_wake_after( 120*TICKS_PER_SECOND );
+    status = rtems_task_wake_after( 120*rtems_clock_get_ticks_per_second() );
     directive_failed( status, "rtems_task_wake_after" );
   }
 }
