@@ -9,7 +9,7 @@
  *
  *  Output parameters:  NONE
  *
- *  COPYRIGHT (c) 1989-1999.
+ *  COPYRIGHT (c) 1989-2009.
  *  On-Line Applications Research Corporation (OAR).
  *
  *  The license and distribution terms for this file may be
@@ -26,6 +26,6 @@ void Task_2()
   rtems_status_code status;
 
   puts( "TA2 - rtems_task_wake_after - sleep 1 minute" );
-  status = rtems_task_wake_after( 60*TICKS_PER_SECOND );
+  status = rtems_task_wake_after( 60*rtems_clock_get_ticks_per_second() );
   directive_failed( status, "rtems_task_wake_after in TA2" );
 }
